fix: correct container to use margin for spacing

--- a/src/components/molecules/NavMenu/navmenu.scss
+++ b/src/components/molecules/NavMenu/navmenu.scss
@@ -29,7 +29,7 @@
     align-items: center;
 
     @include for-size(screen-sm) {
-      margin: .75rem;
+      margin: 0.75rem;
       flex-direction: row;
     }
   }
@@ -40,14 +40,14 @@
     @include for-size(screen-md) {
       text-transform: capitalize;
     }
-  
+
     &:after {
       content: "";
       position: absolute;
       bottom: -1rem;
-      left: calc(50% - .15rem);
+      left: calc(50% - 0.15rem);
       width: 2.25rem;
-      height: .15rem;
+      height: 0.15rem;
       background-color: $white;
       transform: translateX(-50%) scaleX(0);
       transition: transform 0.3s ease-in-out;
@@ -79,7 +79,7 @@
     left: -200%;
     top: 0;
     bottom: 0;
-    padding-left: $padding;
+    padding-left: $spacing-grid;
     background-color: $black;
     width: 100vw;
     height: 100vh;
@@ -89,11 +89,11 @@
       left: 0;
       gap: 0.313rem;
     }
-    
+
     @include for-size(screen-md) {
       gap: 6.875rem;
     }
-    
+
     @include for-size(screen-md) {
       position: static;
       background-color: transparent;
@@ -120,13 +120,13 @@
       text-transform: capitalize;
     }
   }
-  
+
   & .nav-menu__hamburger {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 0.5rem;
-    
+
     @include for-size(screen-md) {
       display: none;
     }
@@ -144,4 +144,3 @@
     }
   }
 }
-
