--- a/src/components/organisms/OurCreations/ourcreations.scss
+++ b/src/components/organisms/OurCreations/ourcreations.scss
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
   gap: 2.5rem;
-  margin-bottom: 10rem;
+  padding-bottom: 10rem;
 
   @include for-size(screen-sm) {
     text-align: start;
